--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -214,6 +214,8 @@
     <Content Include="assets\admin\js\demo\chart-bar-demo.js" />
     <Content Include="assets\admin\js\demo\chart-pie-demo.js" />
     <Content Include="assets\admin\js\demo\datatables-demo.js" />
+    <Content Include="assets\admin\js\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="assets\admin\js\jquery.validate.unobtrusive.min.js" />
     <Content Include="assets\admin\js\sb-admin-2.js" />
     <Content Include="assets\admin\js\sb-admin-2.min.js" />
     <Content Include="assets\admin\vendor\bootstrap\js\bootstrap.bundle.js" />
@@ -1983,6 +1985,7 @@
     <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
     <Content Include="Areas\Admin\Views\User\Index.cshtml" />
     <Content Include="Areas\Admin\Views\User\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Edit.cshtml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
