--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
     <Compile Include="Common\CommonConstants.cs" />
     <Compile Include="Common\Encryptor.cs" />
+    <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
@@ -2817,6 +2818,12 @@
     <Content Include="assets\admin\vendor\jquery\jquery.min.js" />
     <Content Include="assets\admin\vendor\jquery\jquery.slim.js" />
     <Content Include="assets\admin\vendor\jquery\jquery.slim.min.js" />
+    <Content Include="assets\client\css\bootstrap-grid.css" />
+    <Content Include="assets\client\css\bootstrap-grid.min.css" />
+    <Content Include="assets\client\css\bootstrap-reboot.css" />
+    <Content Include="assets\client\css\bootstrap-reboot.min.css" />
+    <Content Include="assets\client\css\bootstrap.css" />
+    <Content Include="assets\client\css\bootstrap.min.css" />
     <Content Include="assets\client\css\easy-responsive-tabs.css" />
     <Content Include="assets\client\css\global.css" />
     <Content Include="assets\client\css\slider.css" />
@@ -2874,12 +2881,15 @@
     <Content Include="assets\client\images\twitter.png" />
     <Content Include="assets\client\images\value-rating.png" />
     <Content Include="assets\client\images\wishlist.png" />
+    <Content Include="assets\client\js\bootstrap.min.js" />
     <Content Include="assets\client\js\easing.js" />
     <Content Include="assets\client\js\easyResponsiveTabs.js" />
     <Content Include="assets\client\js\jquery-1.7.2.min.js" />
+    <Content Include="assets\client\js\jquery-3.4.1.min.js" />
     <Content Include="assets\client\js\jquery.accordion.js" />
     <Content Include="assets\client\js\jquery.easing.js" />
     <Content Include="assets\client\js\move-top.js" />
+    <Content Include="assets\client\js\popper.min.js" />
     <Content Include="assets\client\js\script.js" />
     <Content Include="assets\client\js\slides.min.jquery.js" />
     <Content Include="assets\client\js\startstop-slider.js" />
@@ -3084,6 +3094,12 @@
     <Content Include="Areas\Admin\Views\Shared\_Navagation.cshtml" />
     <Content Include="assets\client\font\Amble-Regular-webfont.ttf" />
     <Content Include="assets\client\images\Thumbs.db" />
+    <Content Include="assets\client\css\bootstrap-grid.css.map" />
+    <Content Include="assets\client\css\bootstrap-grid.min.css.map" />
+    <Content Include="assets\client\css\bootstrap-reboot.css.map" />
+    <Content Include="assets\client\css\bootstrap-reboot.min.css.map" />
+    <Content Include="assets\client\css\bootstrap.css.map" />
+    <Content Include="assets\client\css\bootstrap.min.css.map" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -3127,6 +3143,9 @@
     <Content Include="Views\Shared\TopMenu.cshtml" />
     <Content Include="Views\Shared\Footer.cshtml" />
     <Content Include="Views\Shared\ProductCategory.cshtml" />
+    <Content Include="Views\Product\Category.cshtml" />
+    <Content Include="Views\Product\Detail.cshtml" />
+    <Content Include="Views\About\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
