--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -2825,9 +2825,14 @@
     <Content Include="assets\client\css\bootstrap.css" />
     <Content Include="assets\client\css\bootstrap.min.css" />
     <Content Include="assets\client\css\easy-responsive-tabs.css" />
+    <Content Include="assets\client\css\fontawesome.css" />
+    <Content Include="assets\client\css\fontawesome.min.css" />
     <Content Include="assets\client\css\global.css" />
     <Content Include="assets\client\css\slider.css" />
     <Content Include="assets\client\css\style.css" />
+    <Content Include="assets\client\font\webfonts\fa-brands-400.svg" />
+    <Content Include="assets\client\font\webfonts\fa-regular-400.svg" />
+    <Content Include="assets\client\font\webfonts\fa-solid-900.svg" />
     <Content Include="assets\client\images\about_img.jpg" />
     <Content Include="assets\client\images\arrow-next.png" />
     <Content Include="assets\client\images\arrow-prev.png" />
@@ -2847,6 +2852,8 @@
     <Content Include="assets\client\images\feature-pic5.jpg" />
     <Content Include="assets\client\images\feature-pic6.jpg" />
     <Content Include="assets\client\images\feature-pic7.jpg" />
+    <Content Include="assets\client\images\feature-pic8.jpg" />
+    <Content Include="assets\client\images\feature-pic9.jpg" />
     <Content Include="assets\client\images\linkedin.png" />
     <Content Include="assets\client\images\list-img.png" />
     <Content Include="assets\client\images\logo.png" />
@@ -3100,6 +3107,18 @@
     <Content Include="assets\client\css\bootstrap-reboot.min.css.map" />
     <Content Include="assets\client\css\bootstrap.css.map" />
     <Content Include="assets\client\css\bootstrap.min.css.map" />
+    <Content Include="assets\client\font\webfonts\fa-brands-400.eot" />
+    <Content Include="assets\client\font\webfonts\fa-brands-400.ttf" />
+    <Content Include="assets\client\font\webfonts\fa-brands-400.woff" />
+    <Content Include="assets\client\font\webfonts\fa-brands-400.woff2" />
+    <Content Include="assets\client\font\webfonts\fa-regular-400.eot" />
+    <Content Include="assets\client\font\webfonts\fa-regular-400.ttf" />
+    <Content Include="assets\client\font\webfonts\fa-regular-400.woff" />
+    <Content Include="assets\client\font\webfonts\fa-regular-400.woff2" />
+    <Content Include="assets\client\font\webfonts\fa-solid-900.eot" />
+    <Content Include="assets\client\font\webfonts\fa-solid-900.ttf" />
+    <Content Include="assets\client\font\webfonts\fa-solid-900.woff" />
+    <Content Include="assets\client\font\webfonts\fa-solid-900.woff2" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
